infrastructure/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jovadrops-web-svc
  namespace: jovadrops
  labels:
    app.kubernetes.io/name: jovadrops-web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jovadrops-web
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
